@@ -1,4 +1,4 @@
-.TH HASHDEEP "1" "v3.3 \- 4 Apr 2009" "AFOSI" "United States Air Force"
+.TH HASHDEEP "1" "v3.5.2 \- RBF DATE 2010" "AFOSI" "United States Air Force"
 
 .SH NAME
 hashdeep \- Compute, compare, or audit multiple message digests
