@@ -1,4 +1,4 @@
-.TH MD5DEEP "1" "v3.5.1 \- 30 Dec 2009" "AFOSI" "United States Air Force"
+.TH MD5DEEP "1" "v3.5.2 \- RBF DATE 2010" "AFOSI" "United States Air Force"
 
 .SH NAME
 md5deep \- Compute and compare MD5 message digests
