@@ -1,3 +1,12 @@
+** Changes in version RBF (RBF DATE)
+
+* New Features
+
+      Added expert mode found in md5deep to hashdeep.
+
+
+
+
 ** Changes in version 3.5.1 (30 Dec 2009)
 
 * Bug Fixes
